--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
 			<artifactId>tenant-data</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>br.com.caiosousa</groupId>
+			<artifactId>common</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
