--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
 			<artifactId>common</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>br.com.caiosousa</groupId>
+			<artifactId>pessoa-service</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
